# SketchReconstruction2

./: .gitignore  CMakeLists.txt  resources.qrc
SketchCanvas Installer/config/: config.xml
include/: canvas.h  canvas2.h  canvasmediator.h  dialog.h  halfedge.h  input_sketch.h  input_sketch2.h  layers.h  main_window.h  openglcanvas.h  openglmediator.h  reconstruction.h  scene.h  scene2.h  sketch_library.h  slider_dialog.h
libs/: polycurve.h
libs/polygonalcurve/: CurveN.hpp
libs/tucanow/: CMakeLists.txt
libs/tucanow/include/tucanow/: cylinder.hpp  mesh.hpp  model.hpp  shader.hpp  sphere.hpp
libs/tucanow/src/: scene.cpp
libs/tucanow/src/tucano/tucano/: effect.hpp
qdarkstyle/: style.qss
qss/: darkorange - Copy.qss
release/: .ninja_deps  .ninja_log  CMakeCache.txt  Closed0.off  Closed1.off  Closed10.off  Closed11.off  Closed2.off  Closed3.off  Closed4.off  Closed5.off  Closed6.off  Closed7.off  Closed8.off  Closed9.off  Open0.off  Open0_1.ply  Open0_10.ply  Open0_100.ply  Open0_200.ply  Open0_50.ply  Open0_500.ply  Open2.off  Open2.ply  SketchCanvas.cbp  Stripe0.glb  Stripe0.off  Stripe0.ply  Stripe1.ply  build.ninja  cmake_install.cmake  exportData0.data  exportData9.data  exportDataPoisson0.bnpts  exportDataVIPSS0.xyz  exportDataVIPSS1.xyz  exportDataVIPSS2.xyz  exportDataVIPSS3.xyz  exportDataVIPSS4.xyz  exportDataVIPSS5.xyz  (+6 more)
release/.cmake/api/v1/reply/: cache-v2-d0f416561b6704aed931.json  cache-v2-ed4f359a78c5ebdc1b52.json  cmakeFiles-v1-76f5a0a42e1f15b00437.json  cmakeFiles-v1-dd492b4126da18c3e789.json  codemodel-v2-172d45c3e27a5c6018b9.json  codemodel-v2-d30a74524b401958d9a5.json  index-2020-08-03T22-18-32-0532.json  index-2020-11-20T21-42-05-0403.json  target-Canvas-Debug-cf4dfa1c734fd075b278.json  target-Canvas-Release-8f8318b8ad6d32d9f39f.json  target-Canvas_autogen-Release-e2e188e02c2b8588c95e.json  target-tucanow-Debug-b22a88d34e5d2cdbaea1.json  target-tucanow-Release-975cd4360df4a7ae16ac.json  target-tucanow_autogen-Release-6c851f0c24361dbe90a9.json
release/libs/tucanow/: TucanoWrapper.cbp  cmake_install.cmake  tucanow.exp
release/libs/tucanow/win32-libs/: GetWin32ExternalLibraries.cbp  cmake_install.cmake
src/: canvas.cpp  canvas2.cpp  canvasmediator.cpp  halfedge.cpp  input_sketch.cpp  input_sketch2.cpp  layers.cpp  main.cpp  main_window.cpp  openglcanvas.cpp  openglmediator.cpp  reconstruction.cpp  scene.cpp  scene2.cpp  sketch_library.cpp  sketch_utilities.cpp  sketch_utilities.h  sketchlibrary.cpp  slider_dialog.cpp
xCubeEigen/: Gaussian.h  GeneralInverseMultiquadrics.h  HBRBF.cpp  HBRBF.h  HBRBFEval.cpp  HBRBFEval.h  InverseMultiquadrics.h  MeshData.cpp  MeshData.h  Multiquadrics.h  VTKExport.h  VTKExport2.h  XCube.h  hbrbfvtk.cpp  main.cpp
xCubeEigen/polyg/: SurfacePolygonizer.cpp  SurfacePolygonizer.h
